# yterminal

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
agent-cli/: Cargo.toml
agent-cli/src/: agent.rs  lib.rs  main.rs
docs/superpowers/plans/: 2026-06-29-auto-update.md  2026-06-30-terminal-link-click.md  2026-07-12-agent-overview.md  2026-07-15-terminal-input-latency.md
docs/superpowers/specs/: 2026-06-29-auto-update-design.md  2026-06-30-agent-session-resume-design.md  2026-06-30-terminal-link-click-design.md  2026-07-12-agent-overview-design.md  2026-07-15-ssh-remote-workspace-design.md  2026-07-15-terminal-input-latency-design.md  2026-07-19-agent-hot-restart-design.md  2026-07-21-webgl-font-glyph-sizing.md
scripts/: bump-version.sh  dev-agent-remote.sh  generate-latest-json.mjs  generate-latest-json.test.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_client.rs  agent_service.rs  host_connection.rs  lib.rs  logger.rs  main.rs  pty.rs  remote_protocol.rs  workspace.rs
src-tauri/src/agent/: host_services.rs  mod.rs  osc.rs  paths.rs  repository.rs  server.rs  service.rs  session_manager.rs
src-tauri/tests/: ssh_transport.rs
src/components/: AgentOverview.tsx  AiSidebar.tsx  AppDivider.tsx  AttentionBar.tsx  ContextMenu.tsx  EmojiPicker.tsx  FileViewer.tsx  GitSidebar.tsx  PaneRenderer.tsx  PaneTerminal.tsx  SearchBox.tsx  SettingsPanel.tsx  TabBar.tsx  TerminalView.tsx  UpdateDialog.tsx  WorkspacePalette.tsx  WorkspaceSidebar.tsx  WorkspaceStatusBar.tsx
src/lib/: agent-detect.test.ts  agent-detect.ts  agent-hook-osc.test.ts  agent-hook-osc.ts  agent-hooks.ts  agent-overview.test.ts  agent-overview.ts  agent-run.test.ts  agent-run.ts  agent.ts  ai.ts  alert-sound.ts  app-shortcut.test.ts  app-shortcut.ts  attention.test.ts  attention.ts  clipboard-shortcut.test.ts  clipboard-shortcut.ts  clipboard.ts  config.test.ts  config.ts  context-menu-suppress.test.ts  context-menu-suppress.ts  cursor-visibility.test.ts  cursor-visibility.ts  enter-key.test.ts  enter-key.ts  file-link-classify.test.ts  file-link-classify.ts  file-link.ts  file-reader.ts  file-render.ts  file-viewer-copy.test.ts  file-viewer-copy.ts  git.test.ts  git.ts  han-glyph-normalization.test.ts  han-glyph-normalization.ts  host-transport.test.ts  host-transport.ts  (+53 more)
src/stores/: activity-store.test.ts  activity-store.ts  ai-store.ts  attention-store.ts  git-store.ts  hook-state-store.ts  host-store.ts  layout-store.ts  settings-store.ts  updater-store.test.ts  updater-store.ts  viewer-store.test.ts  viewer-store.ts  workspace-store.test.ts  workspace-store.ts
