[package]
name = "yterminal"
version = "0.18.0-9"
edition = "2021"

[[bin]]
name = "yterminal-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["sync", "io-util", "io-std", "net", "process", "rt-multi-thread", "macros", "time"] }
ciborium = "0.2"
serde_bytes = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
