[package]
name = "yterminal"
version = "0.10.4"
description = "A workspace-first terminal emulator"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# pseudo-terminal: spawn the user's shell, stream IO, propagate resize/exit.
# upstream `tauri-plugin-pty` wraps this same crate but hides the real OS pid;
# we depend on portable-pty directly so cwd lookups via /proc and lsof work.
portable-pty = "0.9"
# enumerate installed system fonts natively (the WebViews Tauri uses don't
# expose the Local Font Access API). source-only to keep the build self-contained.
font-kit = "0.14"
# unbounded per-pane scrollback storage backed by a single SQLite file. `bundled`
# includes SQLite C source so we don't depend on a system libsqlite3.
rusqlite = { version = "0.31", features = ["bundled"] }
# direct tokio dep (already a transitive of tauri) so we can use mpsc channels
# to bridge a per-session blocking reader thread into async `pty_read`. Keeps
# the blocking `read()` and `child.wait()` syscalls off the async worker pool,
# which would otherwise starve once enough PTYs are open (8 sessions × 2
# blocking tasks already exceeds tokio's default 16-worker pool on a 16-core
# Mac, leaving new shells unable to schedule their first read).
tokio = { version = "1", features = ["sync"] }
# HTTP client for the AI sidebar: POST to an OpenAI-compatible chat endpoint.
# rustls (not native-tls) keeps the build self-contained — no system OpenSSL.
# `stream` lets us consume Server-Sent-Events deltas for the streaming variant.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# StreamExt for iterating reqwest's byte stream while parsing SSE `data:` lines.
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
