[package]
name = "yterminal"
default-run = "yterminal"
version = "0.18.0-6"
description = "A workspace-first terminal emulator"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# pseudo-terminal ownership in the per-user agent: spawn the user's shell,
# stream IO, and propagate resize/exit independently of the GUI lifecycle.
portable-pty = "0.9"
# enumerate installed system fonts natively (the WebViews Tauri uses don't
# expose the Local Font Access API). source-only to keep the build self-contained.
font-kit = "0.14"
# Agent workspace documents, PTY journals/checkpoints, plus the legacy local
# scrollback cache. `bundled` avoids a system libsqlite3 dependency.
rusqlite = { version = "0.31", features = ["bundled"] }
# Async socket/SSH protocol and bounded channels. PTY read/write stay on
# dedicated OS threads and child.wait() uses spawn_blocking, keeping blocking
# syscalls off Tokio's worker pool.
tokio = { version = "1", features = ["sync", "io-util", "io-std", "net", "process", "rt-multi-thread", "macros", "time"] }
# Compact binary protocol carried over SSH stdio / the local Unix socket.
# CBOR preserves terminal byte chunks without JSON/base64 expansion.
ciborium = "0.2"
serde_bytes = "0.11"
# Stable identifiers for devices, workspaces and PTY sessions. OS pids stay
# private to the owner agent and are never used as cross-device handles.
uuid = { version = "1", features = ["v4", "serde"] }
# HTTP client for the AI sidebar: POST to an OpenAI-compatible chat endpoint.
# rustls (not native-tls) keeps the build self-contained — no system OpenSSL.
# `stream` lets us consume Server-Sent-Events deltas for the streaming variant.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# StreamExt for iterating reqwest's byte stream while parsing SSE `data:` lines.
futures-util = "0.3"
# verify the minisign signature of a downloaded .deb before installing it as
# root (the Tauri updater only handles AppImage on Linux, so the deb self-update
# path is ours). Already a transitive dep via tauri-plugin-updater; pinned here
# to use it directly. Tauri's `.sig` is a base64-wrapped minisign signature.
minisign-verify = "0.2"
# decode the base64-wrapped minisign public key / signature. Already transitive;
# pinned here for the deb-updater verify path.
base64 = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
